appwrite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
    traefik.constraint-label-stack: appwrite
    traefik.docker.network: appwrite
    traefik.enable: "true"
    traefik.http.routers.appwrite_api_http.entrypoints: appwrite_web
    traefik.http.routers.appwrite_api_http.rule: PathPrefix(`/`)
    traefik.http.routers.appwrite_api_http.service: appwrite_api
    traefik.http.routers.appwrite_api_https.entrypoints: appwrite_websecure
    traefik.http.routers.appwrite_api_https.rule: PathPrefix(`/`)
    traefik.http.routers.appwrite_api_https.service: appwrite_api
    traefik.http.routers.appwrite_api_https.tls: "true"
    traefik.http.services.appwrite_api.loadbalancer.server.port: "80"
  labels:
    io.kompose.service: appwrite
  name: appwrite
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appwrite
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
        traefik.constraint-label-stack: appwrite
        traefik.docker.network: appwrite
        traefik.enable: "true"
        traefik.http.routers.appwrite_api_http.entrypoints: appwrite_web
        traefik.http.routers.appwrite_api_http.rule: PathPrefix(`/`)
        traefik.http.routers.appwrite_api_http.service: appwrite_api
        traefik.http.routers.appwrite_api_https.entrypoints: appwrite_websecure
        traefik.http.routers.appwrite_api_https.rule: PathPrefix(`/`)
        traefik.http.routers.appwrite_api_https.service: appwrite_api
        traefik.http.routers.appwrite_api_https.tls: "true"
        traefik.http.services.appwrite_api.loadbalancer.server.port: "80"
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: appwrite
    spec:
      containers:
        - image: appwrite/appwrite:1.4.13
          name: appwrite
          volumeMounts:
            - mountPath: /storage/uploads
              name: appwrite-uploads
            - mountPath: /storage/cache
              name: appwrite-cache
            - mountPath: /storage/config
              name: appwrite-config
            - mountPath: /storage/certificates
              name: appwrite-certificates
            - mountPath: /storage/functions
              name: appwrite-functions
      restartPolicy: Always
      volumes:
        - name: appwrite-uploads
          persistentVolumeClaim:
            claimName: appwrite-uploads
        - name: appwrite-cache
          persistentVolumeClaim:
            claimName: appwrite-cache
        - name: appwrite-config
          persistentVolumeClaim:
            claimName: appwrite-config
        - name: appwrite-certificates
          persistentVolumeClaim:
            claimName: appwrite-certificates
        - name: appwrite-functions
          persistentVolumeClaim:
            claimName: appwrite-functions
