appwrite-maintenance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: appwrite-maintenance
  name: appwrite-maintenance
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appwrite-maintenance
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: appwrite-maintenance
    spec:
      containers:
        - command:
            - maintenance
          image: appwrite/appwrite:1.4.13
          name: appwrite-maintenance
      restartPolicy: Always
