appwrite-realtime-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
    traefik.constraint-label-stack: appwrite
    traefik.docker.network: appwrite
    traefik.enable: "true"
    traefik.http.routers.appwrite_realtime_ws.entrypoints: appwrite_web
    traefik.http.routers.appwrite_realtime_ws.rule: PathPrefix(`/v1/realtime`)
    traefik.http.routers.appwrite_realtime_ws.service: appwrite_realtime
    traefik.http.routers.appwrite_realtime_wss.entrypoints: appwrite_websecure
    traefik.http.routers.appwrite_realtime_wss.rule: PathPrefix(`/v1/realtime`)
    traefik.http.routers.appwrite_realtime_wss.service: appwrite_realtime
    traefik.http.routers.appwrite_realtime_wss.tls: "true"
  labels:
    io.kompose.service: appwrite-realtime
  name: appwrite-realtime
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appwrite-realtime
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
        traefik.constraint-label-stack: appwrite
        traefik.docker.network: appwrite
        traefik.enable: "true"
        traefik.http.routers.appwrite_realtime_ws.entrypoints: appwrite_web
        traefik.http.routers.appwrite_realtime_ws.rule: PathPrefix(`/v1/realtime`)
        traefik.http.routers.appwrite_realtime_ws.service: appwrite_realtime
        traefik.http.routers.appwrite_realtime_wss.entrypoints: appwrite_websecure
        traefik.http.routers.appwrite_realtime_wss.rule: PathPrefix(`/v1/realtime`)
        traefik.http.routers.appwrite_realtime_wss.service: appwrite_realtime
        traefik.http.routers.appwrite_realtime_wss.tls: "true"
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: appwrite-realtime
    spec:
      containers:
        - command:
            - realtime
          image: appwrite/appwrite:1.4.13
          name: appwrite-realtime
      restartPolicy: Always
