appwrite-worker-builds-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: appwrite-worker-builds
  name: appwrite-worker-builds
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appwrite-worker-builds
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: appwrite-worker-builds
    spec:
      containers:
        - command:
            - worker-builds
          image: appwrite/appwrite:1.4.13
          name: appwrite-worker-builds
          volumeMounts:
            - mountPath: /storage/functions
              name: appwrite-functions
            - mountPath: /storage/builds
              name: appwrite-builds
      restartPolicy: Always
      volumes:
        - name: appwrite-functions
          persistentVolumeClaim:
            claimName: appwrite-functions
        - name: appwrite-builds
          persistentVolumeClaim:
            claimName: appwrite-builds
