appwrite-worker-certificates-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: appwrite-worker-certificates
  name: appwrite-worker-certificates
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appwrite-worker-certificates
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: appwrite-worker-certificates
    spec:
      containers:
        - command:
            - worker-certificates
          image: appwrite/appwrite:1.4.13
          name: appwrite-worker-certificates
          volumeMounts:
            - mountPath: /storage/config
              name: appwrite-config
            - mountPath: /storage/certificates
              name: appwrite-certificates
      restartPolicy: Always
      volumes:
        - name: appwrite-config
          persistentVolumeClaim:
            claimName: appwrite-config
        - name: appwrite-certificates
          persistentVolumeClaim:
            claimName: appwrite-certificates
