appwrite-worker-databases-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: appwrite-worker-databases
  name: appwrite-worker-databases
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appwrite-worker-databases
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: appwrite-worker-databases
    spec:
      containers:
        - command:
            - worker-databases
          image: appwrite/appwrite:1.4.13
          name: appwrite-worker-databases
      restartPolicy: Always
