appwrite-worker-deletes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: appwrite-worker-deletes
  name: appwrite-worker-deletes
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appwrite-worker-deletes
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: appwrite-worker-deletes
    spec:
      containers:
        - command:
            - worker-deletes
          image: appwrite/appwrite:1.4.13
          name: appwrite-worker-deletes
          volumeMounts:
            - mountPath: /storage/uploads
              name: appwrite-uploads
            - mountPath: /storage/cache
              name: appwrite-cache
            - mountPath: /storage/functions
              name: appwrite-functions
            - mountPath: /storage/builds
              name: appwrite-builds
            - mountPath: /storage/certificates
              name: appwrite-certificates
      restartPolicy: Always
      volumes:
        - name: appwrite-uploads
          persistentVolumeClaim:
            claimName: appwrite-uploads
        - name: appwrite-cache
          persistentVolumeClaim:
            claimName: appwrite-cache
        - name: appwrite-functions
          persistentVolumeClaim:
            claimName: appwrite-functions
        - name: appwrite-builds
          persistentVolumeClaim:
            claimName: appwrite-builds
        - name: appwrite-certificates
          persistentVolumeClaim:
            claimName: appwrite-certificates
