openruntimes-executor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: openruntimes-executor
  name: openruntimes-executor
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: openruntimes-executor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.network/runtimes: "true"
        io.kompose.service: openruntimes-executor
    spec:
      securityContext:
        runAsUser: 0    
      containers:
        - env:
            - name: OPR_EXECUTOR_DOCKER_HUB_PASSWORD
              value:
            - name: OPR_EXECUTOR_DOCKER_HUB_USERNAME
              value:
            - name: OPR_EXECUTOR_ENV
              value: production
            - name: OPR_EXECUTOR_INACTIVE_TRESHOLD
              value: "60"
            - name: OPR_EXECUTOR_LOGGING_CONFIG
              value: 
            - name: OPR_EXECUTOR_LOGGING_PROVIDER
              value:
            - name: OPR_EXECUTOR_MAINTENANCE_INTERVAL
              value: "3600"
            - name: OPR_EXECUTOR_NETWORK
              value: 
            - name: OPR_EXECUTOR_RUNTIMES
              value: node-16.0,php-8.0,python-3.9,ruby-3.0
            - name: OPR_EXECUTOR_SECRET
              value: your-secret-key
            - name: OPR_EXECUTOR_STORAGE_BACKBLAZE_ACCESS_KEY
              value: 
            - name: OPR_EXECUTOR_STORAGE_BACKBLAZE_BUCKET
              value:
            - name: OPR_EXECUTOR_STORAGE_BACKBLAZE_REGION
              value: us-west-004
            - name: OPR_EXECUTOR_STORAGE_BACKBLAZE_SECRET
              value: 
            - name: OPR_EXECUTOR_STORAGE_DEVICE
              value: local
            - name: OPR_EXECUTOR_STORAGE_DO_SPACES_ACCESS_KEY
              value: 
            - name: OPR_EXECUTOR_STORAGE_DO_SPACES_BUCKET
              value: 
            - name: OPR_EXECUTOR_STORAGE_DO_SPACES_REGION
              value: us-east-1
            - name: OPR_EXECUTOR_STORAGE_DO_SPACES_SECRET
              value: 
            - name: OPR_EXECUTOR_STORAGE_LINODE_ACCESS_KEY
              value: 
            - name: OPR_EXECUTOR_STORAGE_LINODE_BUCKET
              value: 
            - name: OPR_EXECUTOR_STORAGE_LINODE_REGION
              value: eu-central-1
            - name: OPR_EXECUTOR_STORAGE_LINODE_SECRET
              value: 
            - name: OPR_EXECUTOR_STORAGE_S3_ACCESS_KEY
              value: 
            - name: OPR_EXECUTOR_STORAGE_S3_BUCKET
              value: 
            - name: OPR_EXECUTOR_STORAGE_S3_REGION
              value: us-east-1
            - name: OPR_EXECUTOR_STORAGE_S3_SECRET
              value: 
            - name: OPR_EXECUTOR_STORAGE_WASABI_ACCESS_KEY
              value: 
            - name: OPR_EXECUTOR_STORAGE_WASABI_BUCKET
              value: 
            - name: OPR_EXECUTOR_STORAGE_WASABI_REGION
              value: eu-central-1
            - name: OPR_EXECUTOR_STORAGE_WASABI_SECRET
              value: 
          image: openruntimes/executor:0.4.5
          name: openruntimes-executor
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: openruntimes-executor-claim0
            - mountPath: /storage/builds
              name: appwrite-builds
            - mountPath: /storage/functions
              name: appwrite-functions
            - mountPath: /tmp
              name: openruntimes-executor-claim3
      hostname: appwrite-executor
      restartPolicy: Always
      volumes:
        - name: openruntimes-executor-claim0
          hostPath:
            path: /var/run/docker.sock
        - name: appwrite-builds
          persistentVolumeClaim:
            claimName: appwrite-builds
        - name: appwrite-functions
          persistentVolumeClaim:
            claimName: appwrite-functions
        - name: openruntimes-executor-claim3
          hostPath:
            path: /tmp
