redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: redis
  name: redis
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - redis-server
            - --maxmemory
            - 512mb
            - --maxmemory-policy
            - allkeys-lru
            - --maxmemory-samples
            - "5"
          image: redis:7.0.4-alpine
          name: appwrite-redis
          volumeMounts:
            - mountPath: /data
              name: appwrite-redis
          ports:
          - containerPort: 6379
      restartPolicy: Always
      volumes:
        - name: appwrite-redis
          persistentVolumeClaim:
            claimName: appwrite-redis
