telegraf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: telegraf
  name: telegraf
  namespace: appwrite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: telegraf
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/appwrite: "true"
        io.kompose.service: telegraf
    spec:
      containers:
        - image: appwrite/telegraf:1.4.0
          name: appwrite-telegraf
      restartPolicy: Always
