appwrite-realtime-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appwrite-realtime-svc
  namespace: appwrite
spec:
  selector: 
    io.kompose.service: appwrite-realtime
  ports:
  - name: appwrite-realtime
    protocol: TCP
    port: 80
    targetPort: 80
