appwrite-svc-with-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: appwrite-svc
  namespace: appwrite
spec:
  selector: 
    io.kompose.service: appwrite
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
