appwrite-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appwrite-svc
  namespace: appwrite
spec:
  selector: 
    io.kompose.service: appwrite
  type: LoadBalancer
  ports:
  - name: appwrite-port
    protocol: TCP
    port: 80
    targetPort: 80
