mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: appwrite
spec:
  selector: 
    io.kompose.service: mariadb
  type: ClusterIP
  ports:
  - name: redis-port
    protocol: TCP
    port: 3306
    targetPort: 3306
