openruntimes-executor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openruntimes-executor-svc
  namespace: appwrite
spec:
  selector: 
    io.kompose.service: openruntimes-executor
  type: ClusterIP
  ports:
  - name: openruntimes-executor-port
    protocol: TCP
    port: 80
    targetPort: 80
