redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: appwrite
spec:
  selector: 
    io.kompose.service: redis
  type: ClusterIP
  ports:
  - name: redis-port
    protocol: TCP
    port: 6379
    targetPort: 6379
