telegraf-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-svc
  namespace: appwrite
spec:
  selector: 
    io.kompose.service: telegraf
  type: ClusterIP
  ports:
  - name: telegraf-port
    protocol: TCP
    port: 8125
    targetPort: 8125
